# prayer-calc

./: README.md  calc.py  pyproject.toml
src/prayer-calc-jackinthebox52/: calc.py
